# ETIC_PW2425_PROJETO_I

./: Dockerfile  Findings.txt  LICENSE  Makefile  README.md  compose.yml  pyproject.toml  test.txt
.devcontainer/: devcontainer.json
EDrive/: db.sqlite3  manage.py
EDrive/EDrive/: settings.py  urls.py  wsgi.py
EDrive/authentication/: admin.py  models.py  tests.py  views.py
EDrive/drive/: admin.py  models.py  urls.py  views.py
EDrive/drive/migrations/: 0001_initial.py  0002_remove_folder_folder_content_file_file_parent_and_more.py  0003_alter_file_file_size.py  0004_file_hash.py  0005_file_file_timestamp.py  0006_file_drive_file_hash_6fb242_idx.py  0007_folder_hash_folder_drive_folde_hash_edd730_idx.py  0008_file_favorite_folder_favorite.py  0009_folder_created_at_folder_updated_at_and_more.py  0010_remove_folder_drive_folde_created_7e17da_idx_and_more.py
EDrive/drive/templates/: OGdrive.html  OGdrive_generic.html  OGfolder_detail.html  drive.html  drive_generic.html  folder_detail.html  search_results.html
EDrive/drive/uploads/: 57d2d80d62a215973b354be53509b3bd24f4fe7d92c033a666e5c7d235c4e43d_VrcaYSt.toml
EDrive/hub/: asgi.py  settings.py  urls.py  utilities.py  wsgi.py
EDrive/web/: apps.py  models.py  signals.py  urls.py  views.py
EDrive/web/migrations/: 0001_initial.py
EDrive/web/templates/: about.html  home.html  home_generic.html  login.html  (+1 more)
project/: manage.py
project/EDrive/: asgi.py  settings.py  urls.py  views.py
project/authentication/: admin.py  models.py  urls.py  views.py
project/files/: apps.py
sample files/: Fake_Text.txt
(+14 files in other folders)
