[tool.poetry]
name = "edrive"
version = "0.5.1"
description = "This is a gdrive inspired app, a project created for PROJETO I"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
